--- a/answer.scss
+++ b/answer.scss
@@ -57,7 +57,7 @@ h1{
   // justify-content: center;
 
   & > div {
-    flex-basis: 300px;
+    // flex-basis: 300px;
   }
 }
 
@@ -489,5 +489,49 @@ align-content: space-around;
   }
   30% {
     transform: none;
+  }
+}
+
+
+
+
+
+// =================================================================
+// position
+
+.Position__basic{
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  &__caption{
+    width: 35%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
+  &__img{
+    width: 100%;
+    img{
+      width: 100%;
+    }
+  }
+  &__name{
+    color: #fff;
+    padding: 0px 5px;
+    &1{
+      position: absolute;
+      top: 30%;
+      left: 60%;
+      background-color: rgb(80, 216, 171);
+    }
+    &2{
+      position: absolute;
+      top: 50%;
+      left: 70%;
+      background-color: rgb(32, 48, 105);
+    }
   }
 }
