--- a/answer.scss
+++ b/answer.scss
@@ -403,10 +403,11 @@ h1{
 
 .pictures{
 display: flex;
+justify-content: center;
 flex-wrap: wrap;
 align-content: space-around;
 & > div{
-  width: 32%;
+  width: 30%;
   height: 100px;
   margin: 5px;
   background-color: aquamarine;
@@ -489,5 +490,180 @@ align-content: space-around;
   }
   30% {
     transform: none;
+  }
+}
+
+
+.parent{
+  position: relative;
+}
+
+.square{
+  width: 500px;
+  height: 500px;
+  background-color: chocolate;
+  margin: 200px auto;
+  border-radius: 50%;
+}
+
+.first{
+  position: absolute;
+  top: 0;
+  left: 0;
+    @include animation(
+      $name: square,
+      $iteration-count: infinite,
+      $duration: 1s,
+      $timing-function: linear,
+      $delay:0s
+    );
+}
+
+.second{
+  position: absolute;
+  top: 0;
+  left: 0;
+  @include animation(
+    $name: square,
+    $iteration-count: infinite,
+    $duration: 2s,
+    $timing-function: linear,
+  );
+}
+
+.third{
+  position: absolute;
+  top: 0;
+  left: 0;
+  @include animation(
+    $name: square,
+    $iteration-count: infinite,
+    $duration: 3s,
+    $timing-function: linear,
+  );
+}
+
+
+@keyframes square{
+  0%{
+    transform: rotate(90deg) ; 
+  }
+  100%{
+    transform: rotate(-90deg) ;
+  }
+}
+
+
+.spinner {
+  width: 40px;
+  height: 40px;
+  background-color: #333;
+
+  margin: 100px auto;
+  @include animation(
+    $name: sk-rotateplane,
+    $duration: 1.2s,
+    $iteration-count: infinite,
+    $timing-function: ease-in-out
+  );
+}
+
+@keyframes sk-rotateplane {
+  0% {
+    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+  }
+  50% {
+    transform: perspective(120px) rotateX(-180deg) rotateY(0deg);
+  }
+  100% {
+    transform: perspective(120px) rotateX(-180deg) rotateY(-180deg);
+  }
+}
+
+.double-spinner {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  margin: 100px auto;
+
+  & > div {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #333;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    @include animation(
+      $name: sk-bounce,
+      $duration: 2s,
+      $iteration-count: infinite,
+      $timing-function: ease-in-out
+    );
+
+    &:nth-child(2) {
+      animation-delay: -1s;
+    }
+  }
+}
+
+@keyframes sk-bounce {
+  0%,
+  100% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+}
+
+.rect-spinner {
+  margin: 100px auto;
+  width: 50px;
+  height: 40px;
+  text-align: center;
+  letter-spacing: -2px;
+
+  & > div {
+    background-color: #333;
+    height: 100%;
+    width: 6px;
+    display: inline-block;
+    @include animation(
+      $name: sk-stretchdelay,
+      $duration: 1.2s,
+      $iteration-count: infinite,
+      $timing-function: ease-in-out
+    );
+
+    @for $i from 1 through 5 {
+      &:nth-child(#{$i}) {
+        animation-delay: -1.3s + $i * 0.1s;
+      }
+    }
+    // &:nth-child(2) {
+    //   animation-delay: -1.1s;
+    // }
+    // &:nth-child(3) {
+    //   animation-delay: -1s;
+    // }
+    // &:nth-child(4) {
+    //   animation-delay: -0.9s;
+    // }
+    // &:nth-child(5) {
+    //   animation-delay: -0.8s;
+    // }
+  }
+}
+
+@keyframes sk-stretchdelay {
+  0%,
+  40%,
+  100% {
+    transform: scaleY(0.4);
+  }
+  20% {
+    transform: scaleY(1);
   }
 }
