--- a/position/style.css
+++ b/position/style.css
@@ -34,3 +34,50 @@
      left: 70%;
      background-color: #203069;
    }
+
+.answerPosition{
+     position: relative;
+}
+.wrapper{
+     height: 70vh;
+     min-height: 500px;
+     position: relative;
+}
+
+.wrapper::after{
+     content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgb(43, 162, 213);
+    width: 50%;
+    height: 70vh;
+    min-height: 450px;
+    z-index: -1;
+}
+
+.wrapperImg{
+     height: 86%;
+     width: 76.4%;
+     background-image: url(../img/spring.jpg);
+     background-size: cover;
+     background-position: center 0;
+     position: relative;
+}
+
+.page-title{
+     font-size: 7.2rem;
+     font-weight: bold;
+     color: #fff;
+     text-shadow: 1px 1px 3px rgba(0, 0, 0,.6);
+     position: absolute;
+     top: 50%;
+     right: 0;
+     transform: translate(50%,-50%);
+}
+
+.page-title span{
+     font-size: 2rem;
+     display: block;
+}
