--- a/flex/style.css
+++ b/flex/style.css
@@ -1,11 +1,72 @@
-.pictures {
-     display: flex;
-     flex-wrap: wrap;
-     align-content: space-around;
-   }
-   .pictures > div {
-     width: 32%;
-     height: 100px;
-     margin: 5px;
-     background-color: aquamarine;
-   }
+.container {
+  width: 60%;
+  max-width: 650px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: space-around;
+}
+.container > div {
+  width: 32%;
+  height: 100px;
+  background-color: aquamarine;
+  margin: 5px 0;
+}
+
+.flex-container{
+  width: 60%;
+  max-width: 650px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.flex-container > div{
+  width: 32%;
+  height: 310px;
+}
+
+.flex-element__left{
+  background-color: aquamarine;
+}
+
+.flex-element__center > div{
+  width: 100%;
+  height: 100px;
+  margin-bottom: 5px;
+  background-color: aquamarine;
+}
+
+.flex-element__right > div {
+  width: 100%;
+  height: 100px;
+}
+
+.flex-element__right-top{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+
+.flex-element__right-top > div {
+  width: 49%;
+  height: 100%;
+  background-color: aquamarine;
+}
+
+.flex-element__right-mid{
+  background-color: aquamarine;
+  margin-bottom: 5px;
+}
+
+.flex-element__right-bottom{
+  display: flex;
+  justify-content: space-between;
+}
+
+.flex-element__right-bottom > div{
+  width: 32%;
+  height: 100%;
+  background-color: aquamarine;
+}
