--- a/flex/style.css
+++ b/flex/style.css
@@ -1,3 +1,8 @@
+.container{
+     width: 60%;
+     margin: 0 auto;
+}
+
 .pictures {
      display: flex;
      flex-wrap: wrap;
@@ -7,5 +12,62 @@
      width: 32%;
      height: 100px;
      margin: 5px;
-     background-color: aquamarine;
+     background-color: #23A8D1;
+   }
+
+
+
+   .flex-container{
+     margin: 0 auto;
+     display: flex;
+     justify-content: space-around;
+   }
+   
+   .flex-container > div{
+     width: 32%;
+     height: 310px;
+   }
+   
+   .flex-element__left{
+     background-color: #23A8D1;
+   }
+   
+   .flex-element__center > div{
+     width: 100%;
+     height: 100px;
+     margin-bottom: 5px;
+     background-color: #23A8D1;
+   }
+   
+   .flex-element__right > div {
+     width: 100%;
+     height: 100px;
+   }
+   
+   .flex-element__right-top{
+     display: flex;
+     justify-content: space-between;
+     margin-bottom: 5px;
+   }
+   
+   .flex-element__right-top > div {
+     width: 49%;
+     height: 100%;
+     background-color: #23A8D1;
+   }
+   
+   .flex-element__right-mid{
+     background-color: #23A8D1;
+     margin-bottom: 5px;
+   }
+   
+   .flex-element__right-bottom{
+     display: flex;
+     justify-content: space-between;
+   }
+   
+   .flex-element__right-bottom > div{
+     width: 32%;
+     height: 100%;
+     background-color: #23A8D1;
    }
