--- a/擬似要素/style.css
+++ b/擬似要素/style.css
@@ -14,69 +14,36 @@
   margin: 16px auto 48px;
 }
 
-.thema{
-  display: inline-block;
-  font-size: 16px;
-  border-bottom: 2px solid rgba(45, 136, 210, 0.5);
-  position: absolute;
-  top: 30px;
-  left: 50%;
-  transform: translateX(-50%);
-}
 
-.under-line{
+
+.after{
   font-size: 16px;
   position: relative;
+  display: inline-block;
+  font-size: 24px;
 }
 
-.under-line::after{
+.after::after{
   content: "";
-  width: 130px;
+  width: 80px;
   height: 2px;
-  background-color: #f33;
+  background-color: rgba(45, 136, 210, 0.5);
   display: block;
   position: absolute;
   top: 25px;
-  left: 0;
+  right: 0 ;
 }
 
-.icon{
-  font-size: 16px;
-  position: relative;
-  display: inline-block;
-}
-.icon::before{
-  content: "";
-  background-image: url(./img/star.jpeg);
-  background-size: cover;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  top: 2px;
-  left: -22px;
-}
-.icon::after{
-  content: "";
-  background-image: url(./img/star.jpeg);
-  background-size: cover;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  top: 2px;
-  right: -22px;
-}
 
 .img{
-  width: 60%;
+  width: 80%;
   object-fit: cover;
   position: relative;
   border-radius: 10px;
+  margin:  0 auto;
+  overflow: hidden;
 }
-.img > img {
-  border-radius: 10px;
-}
+
 .img::after{
   content: "";
   width: 100%;
@@ -84,8 +51,70 @@
   position: absolute;
   top: 0;
   left: 0;
-  border-radius: 10px;
-  background: linear-gradient(rgb(34, 34, 253),#00ffff);
-  opacity: 0.5;
+  transform: translateY(-100%);
+  background: linear-gradient(to right ,rgb(158, 241, 241),rgb(75, 204, 191),rgb(0, 255, 136));
+  opacity: .5;
   display: block;
+  transition: transform .5s;
 }
+
+.img:hover::after{
+  transform: none;
+}
+
+
+
+html {
+  font-size: 100%;
+}
+body {
+  color: #676767;
+  font-family: 'Open Sans', sans-serif;
+  letter-spacing: 1.2px;
+}
+img {
+  max-width: 100%;
+}
+
+.content {
+  max-width: 800px;
+  margin: 20px auto;
+  text-align: center;
+}
+/*
+【タイトル】
+画面幅を縮めた際に、要素が左にはみ出すのを防ぐために
+「display: inline-block;」を指定。
+タイトルを基準に疑似要素で横線位置を調整するため、
+「position: relative;」を設定しておく。
+*/
+.title {
+  display: inline-block;
+  font-size: 1.25rem;
+  font-weight: normal;
+  margin-bottom: 50px;
+  position: relative;
+}
+/*
+【タイトル（横線）】
+「width」「height」で長さと太さを設定。
+「content」を指定することで線が表示される。
+「position」「top」「left」で、タイトルを基準に
+横線の位置を設定します。
+*/
+.title::before {
+  content: "";
+  width: 90px;
+  height: 1px;
+  background-color: #676767;
+  position: absolute;
+  top: 50%;
+  left: -120px;
+}
+.text {
+  max-width: 460px;
+  margin:  0 auto;
+  font-size: 0.875rem;
+  line-height: 1.8;
+}
+
