--- a/flex/style.css
+++ b/flex/style.css
@@ -3,10 +3,12 @@
      margin: 0 auto;
 }
 
+
 .pictures {
      display: flex;
      flex-wrap: wrap;
      align-content: space-around;
+     justify-content: center;
    }
    .pictures > div {
      width: 32%;
@@ -20,7 +22,8 @@
    .flex-container{
      margin: 0 auto;
      display: flex;
-     justify-content: space-around;
+     justify-content: center;
+     gap: 10px;
    }
    
    .flex-container > div{
