--- a/応用/style.css
+++ b/応用/style.css
@@ -1,3 +1,5 @@
+
+
 .answer {
   text-align: center;
   margin: 50px 0;
@@ -188,6 +190,8 @@
   position: relative;
   background-color: #000;
   padding: 50px;
+  width: 50%;
+  margin: 20px auto;
 }
 .hero__footer {
   position: absolute;
